[project]
name = "hermod-python"
version = "0.1.0-alpha"
description = "Hermod SDK for Python"

requires-python = ">= 3.8"

dependencies = [
    "multipart>=0.2.4",
    "requests>=2.32.3",
    "pydantic>=2.10.5",
    "cbor2>=5.6.5"
]

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

