[metadata]
name = hermod-python
version = 1.0.0-pre
author = Giuseppe Coviello
author_email = gco@nec-labs.com
description = Hermod SDK for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nla-is/hermod-python
license = BSD-3-Clause
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages =
    hermod
python_requires = >=3.8
install_requires =
    cbor2>=5.5.0,<5.6.0

